[package]
name = "handlers"
version = "0.9.0"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
description = "A macro for generating systems of event handlers"
repository = "https://github.com/YeyaSwizaw/rust-handlers"
keywords = ["callback", "event", "handler", "signal", "slot"]
license = "Apache-2.0"

[dependencies]
interpolate_idents = "*"
