[package]
name = "handlers"
version = "0.10.0"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
description = "A macro for generating systems of event handlers"
repository = "https://github.com/YeyaSwizaw/rust-handlers"
keywords = ["callback", "event", "handler", "signal", "slot"]
license = "Apache-2.0"

[dependencies]
paste = "0.1.3"
